working modal with content, add hidden overflow to body tag to prevent it from shifting when modal is shown, diary content is preloaded

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,6 +21,7 @@
   font-weight: bold;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 .login h1{
